use generic subjects in generic registration messages

--- a/varda-rekisterointi/src/main/resources/messages.properties
+++ b/varda-rekisterointi/src/main/resources/messages.properties
@@ -27,3 +27,8 @@ rekisteroityminen.virhesivu.sivuaEiLoydy.teksti=Sivua ei löytynyt.
 taskien-virheraportti.otsikko=Virheitä rekisteröintien käsittelyssä
 taskien-virheraportti.teksti={0} rekisteröintien ajastettua käsittelyä epäonnistui\:
 taskien-virheraportti.lisatieto={0}, y-tunnus {1}
+
+rekisteroityminen.otsikko.paakayttaja=Sinut on nimetty pääkäyttäjäksi
+rekisteroityminen.otsikko.kayttaja=Organisaation rekisteröityminen
+rekisteroityminen.otsikko.hylatty=Organisaation rekisteröityminen on hylätty
+rekisteroityminen.otsikko.hyvaksytty=Organisaation rekisteröityminen on hyväksytty
