--- a/varda-rekisterointi/src/main/resources/messages_sv.properties
+++ b/varda-rekisterointi/src/main/resources/messages_sv.properties
@@ -27,3 +27,8 @@ rekisteroityminen.virhesivu.sivuaEiLoydy.teksti=Sidan hittades inte.
 taskien-virheraportti.otsikko=Hantering av registreringar misslyckades
 taskien-virheraportti.teksti=Hantering av {0} registreringar misslyckades\:
 taskien-virheraportti.lisatieto={0}, FO-nummer {1}
+
+rekisteroityminen.otsikko.paakayttaja=Sinut on nimetty pääkäyttäjäksi
+rekisteroityminen.otsikko.kayttaja=Organisaation rekisteröityminen
+rekisteroityminen.otsikko.hylatty=Organisaation rekisteröityminen on hylätty
+rekisteroityminen.otsikko.hyvaksytty=Organisaation rekisteröityminen on hyväksytty
