OH-872 new email templates for jotpa

--- a/varda-rekisterointi/src/main/resources/messages.properties
+++ b/varda-rekisterointi/src/main/resources/messages.properties
@@ -29,20 +29,27 @@ taskien-virheraportti.otsikko=Virheitä rekisteröintien käsittelyssä
 taskien-virheraportti.teksti={0} rekisteröintien ajastettua käsittelyä epäonnistui\:
 taskien-virheraportti.lisatieto={0}, y-tunnus {1}
 
-generic.rekisteroityminen.kayttaja.otsikko=Organisaation rekisteröityminen Jotpaa varten
-generic.rekisteroityminen.kayttaja.teksti=yksityinen varhaiskasvatuksen palveluntuottaja ({0}) on rekisteröitynyt Jotpaa varten. Ennen kuin organisaatiosi pääsee tallentamaan muita Jotpan vaatimia tietoja, kunta hyväksyy tai hylkää rekisteröitymisen. Saat sähköpostin, kun kunta on käsitellyt rekisteröitymisen Jotpaa varten.
-generic.rekisteroityminen.kayttaja.lisatieto=Lisätietoja saat tarvittaessa kunnan varhaiskasvatuspalveluista.
-generic.rekisteroityminen.kayttaja.tietosuoja=Jotpaa varten tehdyn rekisteröinnin etenemisestä tiedottamiseen nimetyn henkilön sähköpostiosoite on tallennettu  Opetushallituksen Viestintäpalveluun. Henkilötiedot on saatu organisaation puolesta asioivalta henkilöltä, joka on tehnyt rekisteröitymisen Jotpaa varten. Henkilötietoja käsitellään Jotpaan rekisteröitymiseen liittyen. Henkilötietoja säilytetään Opetushallituksessa, kunnes yhteyttä henkilöön ei rekisteröitymiseen liittyen tarvitse ottaa. Henkilötietoja käsittelevät Opetushallituksessa ne henkilöt, jotka työskentelevät varhaiskasvatuksen tietovarannon (Jotpa) parissa. Henkilötietojen käsittely perustuu lakisääteiseen tehtävään (varhaiskasvatuksen tietovaranto, varhaiskasvatuslaki (540/2018)).
-generic.rekisteroityminen.paakayttaja.otsikko=Sinut on nimetty Jotpa-pääkäyttäjäksi
-generic.rekisteroityminen.paakayttaja.teksti=sinut on nimetty organisaatiostasi Jotpa-pääkäyttäjäksi Opetushallituksen varhaiskasvatuksen tietovarantoon (Jotpa). Jotpa-pääkäyttäjä vastaa oman organisaationsa Jotpa-käyttöoikeuksista.
-generic.rekisteroityminen.paakayttaja.lisatieto=Saat vielä erillisen kutsun luoda tunnukset Jotpa-pääkäyttäjäksi sen jälkeen, kun kunta on käsitellyt palveluntuottajasi rekisteröitymisen Jotpaa varten. Kutsu lähetetään sinulle noreply@opintopolku.fi -osoitteesta.
-generic.rekisteroityminen.paakayttaja.tietosuoja=Sähköpostiosoitteesi on tallennettu Opetushallituksen Viestintäpalveluun ja se tallennetaan Käyttöoikeuspalveluun, kun kunta on hyväksynyt organisaation rekisteröitymisen. Henkilötiedot on saatu organisaation puolesta asioivalta henkilöltä, joka on tehnyt rekisteröitymisen Jotpaa varten. Henkilötietosi tallennetaan Oppijanumeorekisteriin, kun rekisteröidyt palvelun käyttäjäksi. Henkilötietoja  käsitellään käyttöoikeuksien myöntämiseen ja hallinnointiin. Käyttöoikeuspalvelussa henkilötiedot säilytetään niin pitkään kuin käyttöoikeudet ovat voimassa. Henkilötietoja käsittelevät Käyttöoikeuspalvelun ja Oppijanumerorekisterin asiantuntijat. Henkilötietojen käsittely perustuu lakisääteiseen tehtävään (varhaiskasvatuksen tietovaranto, varhaiskasvatuslaki (540/2018)). Lue lisää Oppijanumerorekisterin henkilötietojen käsittelystä ja tutustu Jotpan tietosuojaselosteeseen.
-generic.rekisteroityminen.kasittelemattomat.otsikko=Uusia organisaatioita on rekisteröitynyt Virkailijan Opintopolkuun – käsittele tiedot
-generic.rekisteroityminen.kasittelemattomat.teksti=uusia organisaatioita on rekisteröitynyt Virkailijan Opintopolkuun. Käsitelkää kunkin organisaation rekisteröimät tiedot mahdollisimman pian.
-generic.rekisteroityminen.kasittelemattomat.lisatieto=Käsittelyä odottavia organisaatioita on yhteensä {0} kpl. Organisaatio voi tallentaa tietoja Virkailijan Opintopolkuun vasta, kun ylläpitäjä on hyväksynyt rekisteröitymisen. Hyväksykää rekisteröityminen, mikäli tiedot ovat kunnossa. Mikäli tiedoissa on puutteita tai ristiriitaisuuksia, hylätkää rekisteröityminen. Tarkemmat ohjeet käsittelyyn löytyvät täältä:   https://wiki.eduuni.fi/pages/viewpage.action?pageId=190613018
-generic.rekisteroityminen.hylatty.otsikko=Organisaation rekisteröityminen Jotpaa varten on hylätty
-generic.rekisteroityminen.hylatty.teksti=kunta on hylännyt yksityisen varhaiskasvatuksen palveluntuottajasi ({0}) rekisteröitymisen Jotpaa varten. Käsittelijän perustelu: {1}
-generic.rekisteroityminen.hylatty.lisatieto=Lisätietoja saat tarvittaessa kunnasta.
-generic.rekisteroityminen.hyvaksytty.otsikko=Organisaation rekisteröityminen Jotpaa varten on hyväksytty
-generic.rekisteroityminen.hyvaksytty.teksti=kunta on hyväksynyt yksityisen varhaiskasvatuksen palveluntuottajasi ({0}) rekisteröitymisen Jotpaa varten.
-generic.rekisteroityminen.hyvaksytty.lisatieto=Jotpa-pääkäyttäjäksi nimetty henkilö on saanut sähköpostitse kutsun luoda Jotpaan tunnukset. Kun Jotpan vaatimat tunnukset ja käyttöoikeudet ovat kunnossa, tietosisältöjen tallentaminen Jotpaan voi alkaa.
+generic.terveisin=Ystävällisin terveisin,
+generic.jotpa=Jatkuvan oppimisen ja työllisyyden palvelukeskus
+
+generic.rekisteroityminen.kayttaja.otsikko=Organisaation rekisteröityminen Opintopolun palvelukokonaisuuteen
+generic.rekisteroityminen.kayttaja.teksti={0} on rekisteröitynyt Opintopolun palveluita varten. Ennen kuin organisaatiosi pääsee tallentamaan muita vaadittuja tietoja, Jatkuvan oppimisen ja työllisyyden palvelukeskus (Jotpa) hyväksyy tai hylkää rekisteröitymisen. Saat sähköpostin, kun Jotpa on käsitellyt rekisteröitymisen.
+generic.rekisteroityminen.kayttaja.lisatieto=Lisätietoja saat tarvittaessa Opetushallituksesta, joka vastaa Opintopolun palveluista (yhteisetpalvelut@opintopolku.fi).
+generic.rekisteroityminen.kayttaja.tietosuoja=Rekisteröinnin etenemisestä tiedottamiseen nimetyn henkilön sähköpostiosoite on tallennettu Opetushallituksen Viestintäpalveluun. Henkilötiedot on saatu organisaation puolesta asioivalta henkilöltä, joka on tehnyt rekisteröitymisen. Henkilötietoja käsitellään palveluun rekisteröitymiseen liittyen. Henkilötietoja säilytetään Opetushallituksessa, kunnes yhteyttä henkilöön ei rekisteröitymiseen liittyen tarvitse ottaa. Henkilötietoja käsittelevät Opetushallituksessa ne henkilöt, jotka työskentelevät palveluiden parissa. Henkilötietojen käsittely perustuu lakisääteiseen tehtävään (884/2017).
+
+generic.rekisteroityminen.paakayttaja.otsikko=Sinut on nimetty Opintopolun palveluiden pääkäyttäjäksi
+generic.rekisteroityminen.paakayttaja.teksti=sinut on nimetty organisaatiostasi pääkäyttäjäksi Opetushallituksen Opintopolun palveluihin. Jotpa-pääkäyttäjä vastaa palvelun käyttöoikeuksista ja voi tallentaa tietoja Opintopolkuun oman organisaationsa osalta.
+generic.rekisteroityminen.paakayttaja.lisatieto=Saat vielä erillisen kutsun luoda tunnukset pääkäyttäjäksi sen jälkeen, kun Jatkuvan oppimisen ja työllisyyden palvelukeskus (Jotpa) on käsitellyt rekisteröitymisen. Kutsu lähetetään sinulle noreply@opintopolku.fi -osoitteesta.
+generic.rekisteroityminen.paakayttaja.tietosuoja=Sähköpostiosoitteesi on tallennettu Opetushallituksen Viestintäpalveluun ja se tallennetaan Käyttöoikeuspalveluun, kun Jotpa on hyväksynyt organisaation rekisteröitymisen. Henkilötiedot on saatu organisaation puolesta asioivalta henkilöltä, joka on tehnyt organisaation rekisteröitymisen. Henkilötietosi tallennetaan Oppijanumerorekisteriin, kun rekisteröidyt palvelun käyttäjäksi. Henkilötietoja käsitellään käyttöoikeuksien myöntämiseen ja hallinnointiin. Käyttöoikeuspalvelussa henkilötiedot säilytetään niin pitkään kuin käyttöoikeudet ovat voimassa. Henkilötietoja käsittelee Opetushallitus. Henkilötietojen käsittely perustuu lakisääteiseen tehtävään (884/2017).
+
+generic.rekisteroityminen.kasittelemattomat.otsikko=Organisaatioita on rekisteröitynyt Opintopolun palveluita varten – käsittele tiedot
+generic.rekisteroityminen.kasittelemattomat.teksti=organisaatioita on rekisteröitynyt Opintopolun palveluita varten. Käsittele kunkin organisaation rekisteröimät tiedot mahdollisimman pian.
+generic.rekisteroityminen.kasittelemattomat.lisatieto=Käsittelyä odottavia organisaatioita on yhteensä {0} kpl. Organisaatio voi tallentaa tietoja vasta, kun virkailija on hyväksynyt rekisteröitymisen. Hyväksy rekisteröityminen, mikäli tiedot ovat kunnossa. Mikäli tiedoissa on puutteita tai ristiriitaisuuksia, hylkää rekisteröityminen.
+
+generic.rekisteroityminen.hylatty.otsikko=Organisaation rekisteröityminen Opintopolun palveluita varten on hylätty
+generic.rekisteroityminen.hylatty.teksti=Jatkuvan oppimisen ja työllisyyden palvelukeskus on hylännyt rekisteröitymisen. Käsittelijän perustelu: {0}
+generic.rekisteroityminen.hylatty.lisatieto=Lisätietoja saat tarvittaessa Jotpasta (rahoitus@jotpa.fi).
+
+generic.rekisteroityminen.hyvaksytty.otsikko=Organisaation rekisteröityminen Opintopolun palveluita varten on hyväksytty
+generic.rekisteroityminen.hyvaksytty.teksti=Jatkuvan oppimisen ja työllisyyden palvelukeskus on hyväksynyt rekisteröitymisen.
+generic.rekisteroityminen.hyvaksytty.lisatieto=Pääkäyttäjäksi nimetty henkilö on saanut sähköpostitse kutsun luoda Opintopolun palveluihin tunnukset. Kun vaaditut tunnukset ja käyttöoikeudet ovat kunnossa, tietosisältöjen tallentaminen voi alkaa.
