OPHYK-107 use postgres in tests

--- a/varda-rekisterointi/src/main/resources/messages_sv.properties
+++ b/varda-rekisterointi/src/main/resources/messages_sv.properties
@@ -15,7 +15,7 @@ varda.rekisteroityminen.kunta.otsikko=Privata serviceproducenter inom småbarnsp
 varda.rekisteroityminen.kunta.teksti=privata serviceproducenter inom småbarnspedagogik har registrerat sig för att ta i bruk Varda. Behandla uppgifterna som respektive serviceproducent registrerat så snart som möjligt.
 varda.rekisteroityminen.kunta.lisatieto=Sammanlagt {0} organisationers registreringar väntar på handläggning. Den privata serviceproducenten inom småbarnspedagogiken kan börja föra in uppgifter i Varda först då kommunen har godkänt registreringen inför Varda. Godkänn registreringen om uppgifterna är korrekta. Om uppgifterna är bristfälliga eller felaktiga, avslå registreringen. Noggrannare anvisningar för handläggningen av registeringen hittar du här: https://wiki.eduuni.fi/pages/viewpage.action?pageId=190613018
 varda.rekisteroityminen.hylatty.otsikko=Organisationens registrering för att ta i bruk Varda har avslagits
-varda.rekisteroityminen.hylatty.teksti=kommunen har avslagit den privata serviceproducentens ({0}) registrering för att ta i bruk Varda. Handläggarens motivering: {1}
+varda.rekisteroityminen.hylatty.teksti=kommunen har avslagit den privata serviceproducentens ({0}) registrering för att ta i bruk Varda. Handläggarens motivering:
 varda.rekisteroityminen.hylatty.lisatieto=Ytterligare information ges vid behov av kommunen.
 varda.rekisteroityminen.hyvaksytty.otsikko=Organisationens registrering för att ta i bruk Varda har godkänts
 varda.rekisteroityminen.hyvaksytty.teksti=kommunen har godkänt den privata serviceproducentens ({0}) registrering för att ta i bruk Varda.
