--- a/varda-rekisterointi/src/main/resources/messages.properties
+++ b/varda-rekisterointi/src/main/resources/messages.properties
@@ -15,7 +15,7 @@ varda.rekisteroityminen.kunta.otsikko=Yksityisiä varhaiskasvatuksen palveluntuo
 varda.rekisteroityminen.kunta.teksti=yksityisiä varhaiskasvatuksen palveluntuottajia on rekisteröitynyt Vardaa varten. <strong>Käsittele kunkin yksityisen varhaiskasvatuksen palveluntuottajan rekisteröimät tiedot mahdollisimman pian.</strong>
 varda.rekisteroityminen.kunta.lisatieto=Käsittelyä odottavia organisaatioita on yhteensä {0} kpl. Yksityinen varhaiskasvatuksen palveluntuottaja voi tallentaa tietoja Vardaan vasta, kun kunta on hyväksynyt rekisteröitymisen Vardaa varten. Hyväksy rekisteröityminen, mikäli tiedot ovat kunnossa. Mikäli tiedoissa on puutteita tai ristiriitaisuuksia, hylkää rekisteröityminen. Tarkemmat ohjeet käsittelyyn löytyvät täältä: https://wiki.eduuni.fi/pages/viewpage.action?pageId=190613018
 varda.rekisteroityminen.hylatty.otsikko=Organisaation rekisteröityminen Vardaa varten on hylätty
-varda.rekisteroityminen.hylatty.teksti=kunta on hylännyt yksityisen varhaiskasvatuksen palveluntuottajasi ({0}) rekisteröitymisen Vardaa varten. Käsittelijän perustelu: {1}
+varda.rekisteroityminen.hylatty.teksti=kunta on hylännyt yksityisen varhaiskasvatuksen palveluntuottajasi ({0}) rekisteröitymisen Vardaa varten. Käsittelijän perustelu:
 varda.rekisteroityminen.hylatty.lisatieto=Lisätietoja saat tarvittaessa kunnasta.
 varda.rekisteroityminen.hyvaksytty.otsikko=Organisaation rekisteröityminen Vardaa varten on hyväksytty
 varda.rekisteroityminen.hyvaksytty.teksti=kunta on hyväksynyt yksityisen varhaiskasvatuksen palveluntuottajasi ({0}) rekisteröitymisen Vardaa varten.
